fixing responsive design on ios

--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,10 @@ main {
     background-image: linear-gradient(to bottom, rgba(0, 87, 100, 0.24), rgba(0, 0, 0, 0.14)), url("../images/columbia.JPG");
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
 }
 
 .heading {
-
     color: white;
     font-size:larger;
 
@@ -136,7 +136,7 @@ img {
 @media screen and (max-width: 400px) {
     .heading {
         font-size: small;
-        position: absolute;
+        position: relative;
         top: 25%;
         transform: translate(0%, -50%);
     }
